[package]
name = "gitnook"
version = "1.0.0"
edition = "2021"
description = "Lightweight local version control contexts inside any Git repo"
license = "MIT"
repository = "https://github.com/deadsoftie/gitnook"
readme = "README.md"
keywords = ["git", "version-control", "local", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "=4.5.23", features = ["derive"] }
git2 = "0.18"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "=3.14.0"
